--- a/public/styles.css
+++ b/public/styles.css
@@ -24,9 +24,18 @@ body {
 .pdf-thumbnail {
     width: 100px;
     height: 140px;
-    object-fit: cover;
     margin-right: 15px;
     border: 1px solid #999;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
+}
+
+.pdf-thumbnail-img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
 .pdf-link {
